Fixed spacing issues

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -52,11 +52,12 @@ div.column {
 }
 
 .side-content {
-  padding-left: 25px;
+  padding-left: 12px;
 }
 
 .main-content {
-    width: 110%;
+    width: 70%;
+    padding-right: 12px;
 }
 
 .contact-info {
@@ -124,7 +125,7 @@ div.column {
       margin-bottom: $height;
   }
   li {
-      margin-bottom: 8px;
+      margin-bottom: 22px;
   }
 }
 
